# Automated_RKG

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json  settings.local.json
config/: settings.py
examples/: example_gnn_research.py
src/: main.py
src/graph/: workflow.py
src/graph/nodes/: component_expander.py  entity_extractor.py  github_code_searcher.py  markdown_generator.py  query_generator.py  relationship_inferrer.py  web_searcher.py
src/models/: __init__.py  citation.py  code_block.py  concept.py  relationship.py  state.py
src/prompts/: entity_extraction.py  query_generation.py  relationship_inference.py
src/services/: brave_search_service.py  concept_normalizer.py  github_search_service.py  openai_service.py
src/utils/: __init__.py  code_utils.py  concept_utils.py  json_utils.py  logging_config.py  markdown_utils.py  prompt_utils.py  state_utils.py  validators.py
